--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css'
     integrity='sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=='
     crossorigin='anonymous' referrerpolicy='no-referrer' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <header>
+        <nav class="flex">
+            <div class="col_header flex">
+                <div class="card_header_left">
+                    sinistra
+                </div>
+            </div>
+
+            <div class="col_header flex">
+                <div class="card_header_right">
+                    destra
+                </div>               
+            </div>
+
+        </nav>
 
     </header>
 
@@ -22,7 +39,7 @@
 
     </main>
 
-    
+
     <footer>
 
     </footer>
