end first main section color structure

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
     <header>
         <nav class="flex">
-            <div class="col_header flex">
+            <div class="row_header flex">
                 <div class="card_header_left">
                     sinistra
                 </div>
             </div>
 
-            <div class="col_header flex">
+            <div class="row_header flex">
                 <div class="card_header_right">
                     destra
                 </div>               
@@ -36,6 +36,23 @@
 
 
     <main>
+        <section class="pd20">
+            <div class="main_container">
+                <h2 class="tx_center">Un po di testo</h2>
+                <div class="row_main flex">
+                    <div class="small_main_col">
+
+                    </div>
+
+                    <div class="big_main_col">
+                        
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+       
 
     </main>
 
