added second section color structure

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section class="pd20">
             <div class="main_container">
-                <h2 class="tx_center">Un po di testo</h2>
+                <h1 class="tx_center">Un po di testo</h1>
                 <div class="row_main flex">
                     <div class="small_main_col">
 
@@ -48,6 +48,31 @@
                         
                     </div>
 
+                </div>
+
+            </div>
+        </section>
+
+        <section class="pd20">
+            <div class="main_container">
+                <h2>un po di testo</h2>
+                <div class="row_main space_between flex">
+                    <div class="cards_second_section">
+
+                    </div>
+
+                    <div class="cards_second_section">
+
+                    </div>
+
+                    <div class="cards_second_section">
+
+                    </div>
+
+                </div>
+
+                <div class="container_team">
+                    
                 </div>
 
             </div>
