added nav section

--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
     <header>
         <nav class="flex">
             <div class="row_header flex">
-                <div class="card_header_left">
-                    sinistra
+                <div class="card_header_left flex">
+                    <img src="./img/logo-small.png" alt="">
+                    <div class="container_links_header sx flex align_center">
+                        <a href="">Perchè Dropbox</a>
+                        <a href="">Funzioni</a>
+                        <a href="">Piani e prezzi</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row_header flex">
-                <div class="card_header_right">
-                    destra
+                <div class="card_header_right flex justy_end">
+                    <div class="container_links_header dx flex align_center">
+                        <a href="">Supporto</a>
+                        <a href="">Contatta l'ufficio vendite</a>
+                        <a href="">Accedi</a>
+                        <div class="button_header">Inizia</div>
+                    </div>
                 </div>               
             </div>
 
