added first paragraph section

--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
     <main>
         <section class="pd20">
             <div class="main_container">
-                <h1 class="tx_center">Un po di testo</h1>
+                <h1>Tutto ciò che ti serve per il <br>
+                    lavoro, in un unico posto
+                </h1>
                 <div class="row_main flex">
                     <div class="small_main_col">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br>
+                            Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
 
                     </div>
 
