added first card of the second section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 
     <main>
-        <section class="pd20">
-            <div class="main_container">
+        <section class="pd40">
+            <div class="main_container_small">
                 <h1>Tutto ciò che ti serve per il <br>
                     lavoro, in un unico posto
                 </h1>
@@ -57,11 +57,16 @@
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br>
                             Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                         </p>
+                        <button class="bottone_prova_gratuita">
+                            Inizia la tua prova gratuita
+                        </button>
+                        <div class="margin_bottom_20">Annulla in qualsiasi momento</div>
+                        <i class="fa-solid fa-arrow-down"></i>
 
                     </div>
 
                     <div class="big_main_col">
-                        
+                        <img src="./img/jumbo.png" alt="">
                     </div>
 
                 </div>
@@ -69,13 +74,50 @@
             </div>
         </section>
 
-        <section class="pd20">
+        <section class="pd150">
             <div class="main_container">
-                <h2>un po di testo</h2>
+                <h2>Troviamo il piano business che fa per te</h2>
+                <div class="radio_button_main flex">
+                    <div class="fatturazione_mensile">
+                        <input class="scale_2" type="radio" name="Fatturazione mensile" id=""> <span>Fatturazione mensile</span>
+                    </div>
+                    <div class="fatturazione_annuale">
+                        <input class="scale_2" type="radio" name="annuale" id=""> <span>Fatturazione annuale</span> 
+                    </div>
+                </div>
                 <div class="row_main space_between flex">
                     <div class="cards_second_section">
-
+                        <i class="fa-solid fa-user-tie"></i>
+                        <div class="cards_container">
+                            <h3 class="margin_top_bottom_20">Professional</h3>
+                            <strong>€ 12.00</strong>
+                            <div class="margin_mese">/mese</div>
+                            <div class="pdb15">
+                                <i class="fa-solid fa-user-tie"></i> 1 Utente
+                            </div>
+                            <div class="pdb15 flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>5 TB di spazio di archiviazione sicuro</div>
+                            </div>
+                            <div class="paddin_before_buttons flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            </div>
+                            <div class="main_container_small">
+                                <button class="bottone_prova_gratuita pdb15">
+                                    Inizia la tua prova gratuita
+                                </button>    
+                                <div>oppure <a href="">acquista ora</a></div>
+                                <div class="riga"></div>
+                                <h5 class="pdb15">Punti salienti del piano</h5>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    
 
                     <div class="cards_second_section">
 
@@ -94,7 +136,7 @@
             </div>
         </section>
 
-        <section class="pd20">
+        <section class="pd40">
             <div class="main_container">
                 <div class="row_main flex">
                     <div class="big_main_col">
@@ -110,7 +152,7 @@
             </div>
         </section>
 
-        <section class="pd20">
+        <section class="pd40">
             <div class="main_container">
                 <h2>un po di testo</h2>
                 <div class="row_main wrap space_between flex">
@@ -147,7 +189,7 @@
             </div>
         </section>
 
-        <section class="pd20">
+        <section class="pd40">
             <div class="image_container flex">
 
                 <div class="fourth_section_column flex wrap">
@@ -193,7 +235,7 @@
             </div>
         </section>
 
-        <section class="pd20">
+        <section class="pd40">
             <div class="main_container">
 
             </div>
