--- a/index.html
+++ b/index.html
@@ -120,11 +120,80 @@
                     
 
                     <div class="cards_second_section">
-
+                        <i class="fa-solid fa-user-tie"></i>
+                        <div class="cards_container">
+                            <h3 class="margin_top_bottom_20">Professional</h3>
+                            <strong>€ 12.00</strong>
+                            <div class="margin_mese">/mese</div>
+                            <div class="pdb15">
+                                <i class="fa-solid fa-user-tie"></i> 1 Utente
+                            </div>
+                            <div class="pdb15 flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>5 TB di spazio di archiviazione sicuro</div>
+                            </div>
+                            <div class="paddin_before_buttons flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            </div>
+                            <div class="main_container_small">
+                                <button class="bottone_prova_gratuita pdb15">
+                                    Inizia la tua prova gratuita
+                                </button>    
+                                <div>oppure <a href="">acquista ora</a></div>
+                                <div class="riga"></div>
+                                <h5 class="pdb15">Punti salienti del piano</h5>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                                <div class="pdb40 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="cards_second_section">
-
+                        <i class="fa-solid fa-user-tie"></i>
+                        <div class="cards_container">
+                            <h3 class="margin_top_bottom_20">Professional</h3>
+                            <strong>€ 12.00</strong>
+                            <div class="margin_mese">/mese</div>
+                            <div class="pdb15">
+                                <i class="fa-solid fa-user-tie"></i> 1 Utente
+                            </div>
+                            <div class="pdb15 flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>5 TB di spazio di archiviazione sicuro</div>
+                            </div>
+                            <div class="paddin_before_buttons flex">
+                                <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            </div>
+                            <div class="main_container_small">
+                                <button class="bottone_prova_gratuita pdb15">
+                                    Inizia la tua prova gratuita
+                                </button>    
+                                <div>oppure <a href="">acquista ora</a></div>
+                                <div class="riga"></div>
+                                <h5 class="pdb15">Punti salienti del piano</h5>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Nessun limite di spazio per i file</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                                <div class="pdb15 flex">
+                                    <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                </div>
+                                
+                            </div>
+                        </div>
                     </div>
 
                 </div>
