added second section proxy

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     </div>
 
-                    <div class="big_main_col">
+                    <div class="big_main_col fixed_height">
                         <img src="./img/jumbo.png" alt="">
                     </div>
 
@@ -199,7 +199,23 @@
                 </div>
 
                 <div class="container_team">
-                    ciao
+                    <div class="team_card">
+                        <i class="fa-solid fa-user-tie"></i> Team
+                    </div>
+                    <div class="cards_container flex">
+                        <div class="big_main_col">
+                            <h3 class="pdb15">Enterprise</h3>
+                            <div class="pdb40"><strong>Contatta l'ufficio vendite per i prezzi</strong></div> 
+                            <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
+
+                        </div>
+                        <div class="small_main_col flex height_80">
+                            <button class="bottone_prova_gratuita_team">
+                                Contatta l' ufficio vendite
+                            </button>  
+                        </div>
+                    </div>
+                    
                 </div>
 
             </div>
