added third section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </section>
 
-        <section class="pd150">
+        <section class="mgt150">
             <div class="main_container">
                 <h2>Troviamo il piano business che fa per te</h2>
                 <div class="radio_button_main flex">
@@ -221,14 +221,17 @@
             </div>
         </section>
 
-        <section class="pd40">
+        <section class="mgt150">
             <div class="main_container">
                 <div class="row_main flex">
-                    <div class="big_main_col">
-
+                    <div class="big_main_col_partner">
+                        <img class="partner_png" src="./img/partner.png" alt="">
                     </div>
 
-                    <div class="small_main_col">
+                    <div class="small_main_col_partner">
+                        <h3 class="pdb15">Entra in contatto con un partner Dropbox</h3>
+                        <p class="pdb15">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui l'implementazione, integrazione, gestione e supporto continui.</p>
+                        <button class="trova_un_partner_button">Trova un partner</button>
                         
                     </div>
 
@@ -241,27 +244,27 @@
             <div class="main_container">
                 <h2>un po di testo</h2>
                 <div class="row_main wrap space_between flex">
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
-                    <div class="cards_third_section">
+                    <div class="cards_fourth_section">
 
                     </div>
 
