initial work push

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     </div>
 
                     <div class="small_main_col_partner">
-                        <h3 class="pdb15">Entra in contatto con un partner Dropbox</h3>
+                        <h3 class="pdb15 pdt30">Entra in contatto con un partner Dropbox</h3>
                         <p class="pdb15">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui l'implementazione, integrazione, gestione e supporto continui.</p>
                         <button class="trova_un_partner_button">Trova un partner</button>
                         
@@ -242,7 +242,7 @@
 
         <section class="pd40">
             <div class="main_container">
-                <h2>un po di testo</h2>
+                <h2>Esegui più operazioni con Dropbox Business</h2>
                 <div class="row_main wrap space_between flex">
                     <div class="cards_fourth_section">
 
