fixed the position and size of all buttons

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
                             </div>
                             <div class="main_container_small">
-                                <button class="bottone_prova_gratuita pdb15">
+                                <button class="bottone_prova_gratuita wth100 pdb15">
                                     Inizia la tua prova gratuita
                                 </button>    
                                 <div>oppure <a href="">acquista ora</a></div>
@@ -135,7 +135,7 @@
                                 <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
                             </div>
                             <div class="main_container_small">
-                                <button class="bottone_prova_gratuita pdb15">
+                                <button class="bottone_prova_gratuita wth100 pdb15">
                                     Inizia la tua prova gratuita
                                 </button>    
                                 <div>oppure <a href="">acquista ora</a></div>
@@ -153,7 +153,7 @@
                                 <div class="pdb15 flex">
                                     <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
                                 </div>
-                                <div class="pdb40 flex">
+                                <div class="flex">
                                     <i class="fa-solid fa-check pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                 <i class="fa-solid fa-user-tie pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
                             </div>
                             <div class="main_container_small">
-                                <button class="bottone_prova_gratuita pdb15">
+                                <button class="bottone_prova_gratuita wth100 pdb15">
                                     Inizia la tua prova gratuita
                                 </button>    
                                 <div>oppure <a href="">acquista ora</a></div>
@@ -209,7 +209,7 @@
                             <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
 
                         </div>
-                        <div class="small_main_col flex height_80">
+                        <div class="small_main_col flex height_100">
                             <button class="bottone_prova_gratuita_team">
                                 Contatta l' ufficio vendite
                             </button>  
