added fourth section proxy

--- a/index.html
+++ b/index.html
@@ -241,30 +241,63 @@
         </section>
 
         <section class="pd40">
-            <div class="main_container">
+            <div class="main_container pd20">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
                 <div class="row_main wrap space_between flex">
                     <div class="cards_fourth_section">
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+
+                    <div class="cards_fourth_section">
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
 
                     </div>
 
                     <div class="cards_fourth_section">
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+
+                    <div class="cards_fourth_section">
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
 
                     </div>
 
                     <div class="cards_fourth_section">
-
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
                     </div>
 
                     <div class="cards_fourth_section">
-
-                    </div>
-
-                    <div class="cards_fourth_section">
-
-                    </div>
-
-                    <div class="cards_fourth_section">
+                        <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="pdt30">
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                            Paper direttamente da Dropbox.
+                        </p>
 
                     </div>
 
