added another section

--- a/index.html
+++ b/index.html
@@ -301,13 +301,18 @@
 
                     </div>
 
-                </div>
-
-                <div class="container_third_section">
-                    
-                </div>
-
+                </div>         
             </div>
+        </section>
+
+        <section class="pd40">
+            <div class="main_container pd20">
+                <div class="container_third_section">
+                    <h2 class="pdb40">Più di 500.000 team utilizzano <br>
+                        Dropbox Business</h2>  
+                    <a href="#">Scopri di più sui nostri clienti</a>                       
+                </div>
+            </div>                   
         </section>
 
         <section class="pd40">
