added domande frequenti section

--- a/index.html
+++ b/index.html
@@ -395,13 +395,44 @@
 
             </div>
 
-            <div class="main_container">
-                    
+            <div class="main_container flex pd40 space_between">
+                <h2 class="pdl20">
+                    Porta Dropbox Business <br>
+                    nella tua azienda.
+                </h2>
+                <a class="pdr20" href="#">
+                    <button class="trova_un_partner_button">Inizia la tua prova gratuita</button>
+                </a>                   
             </div>
         </section>
 
         <section class="pd40">
-            <div class="main_container">
+            <div class="main_container pd20">
+                <h2 class="pd40">Domande Frequenti</h2>
+                <div>
+                    <hr>
+                </div>
+                <div class="flex align_center space_between pd40">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="pdb15">
+                    <hr>
+                </div>
+                <div class="flex align_center space_between pd40">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="pdb15">
+                    <hr>
+                </div>
+                <div class="flex align_center space_between pd40">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="pdb80">
+                    <hr>
+                </div>
 
             </div>
         </section>
