--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="footer_container">
             <div class="flex space_between pdb40"> 
                 <div class="col_footer">
-                    <h3 class="pdb15">Dropbox</h3>
+                    <h3 class="pdb15 white">Dropbox</h3>
                     <div class="pdb15">
                         <a href="#">Applicazione desktop</a>
                     </div>
@@ -490,7 +490,7 @@
                 </div>
 
                 <div class="col_footer">
-                    <h3 class="pdb15">Prodotti</h3>
+                    <h3 class="pdb15 white">Prodotti</h3>
                     <div class="pdb15">
                         <a href="#">Applicazione desktop</a>
                     </div>
@@ -509,7 +509,7 @@
                 </div>
 
                 <div class="col_footer">
-                    <h3 class="pdb15">Azienda</h3>
+                    <h3 class="pdb15 white">Azienda</h3>
                     <div class="pdb15">
                         <a href="#">Applicazione desktop</a>
                     </div>
@@ -528,7 +528,7 @@
                 </div>
 
                 <div class="col_footer">
-                    <h3 class="pdb15">Supporto</h3>
+                    <h3 class="pdb15 white">Supporto</h3>
                     <div class="pdb15">
                         <a href="#">Applicazione desktop</a>
                     </div>
@@ -547,7 +547,7 @@
                 </div>
 
                 <div class="col_footer">
-                    <h3 class="pdb15">Community</h3>
+                    <h3 class="pdb15 white">Community</h3>
                     <div class="pdb15">
                         <a href="#">Applicazione desktop</a>
                     </div>
@@ -566,7 +566,7 @@
                 </div>
             </div>           
             <div class="riga_footer"></div>
-            <div class="pdb40"><i class="fa-solid fa-earth-americas pdr5"></i> Italiano <i class="fa-solid fa-caret-up"></i></div>
+            <div class="pdb40"><i class="fa-solid fa-earth-americas white pdr5"></i> Italiano <i class="fa-solid fa-caret-up white"></i></div>
         </div> 
     </footer>
 </body>
