general padding fixing

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
         <section class="pd40 pdb80">
             <div class="main_container pd20">
-                <div class="container_third_section pd20">
+                <div class="container_third_section pdt30 pdb20">
                     <h2 class="pdb40">Più di 500.000 team utilizzano <br>
                         Dropbox Business</h2>  
                     <a class="link_blu" href="#">Scopri di più sui nostri clienti</a>                       
