fixed color image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="flex">
             <div class="row_header flex">
                 <div class="card_header_left flex">
-                    <img src="./img/logo-small.png" alt="">
+                    <img class="img_nav" src="./img/logo-small.png" alt="">
                     <div class="container_links_header sx flex align_center">
                         <a href="">Perchè Dropbox</a>
                         <a href="">Funzioni</a>
