fixed borser shadow image

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="main_container_small">
                 <h1 class="pdt60">Tutto ciò che ti serve per il lavoro, in un unico posto
                 </h1>
-                <div class="row_main flex">
+                <div class="pdt30 pdb15 flex">
                     <div class="small_main_col">
                         <p>
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br>
@@ -67,7 +67,7 @@
                             </button>
                         </a>                      
                         <div class="margin_bottom_20">Annulla in qualsiasi momento</div>
-                        <i class="fa-solid fa-arrow-down font_size30"></i>
+                        <i class="fa-solid fa-arrow-down font_size30 pdt30"></i>
 
                     </div>
 
@@ -80,9 +80,9 @@
             </div>
         </section>
 
-        <section class="mgt150">
+        <section class="pdt150">
             <div class="main_container">
-                <h2 class="pd20">Troviamo il piano business che fa per te</h2>
+                <h2 class="pd20">Trova il piano business che fa per te</h2>
                 <div class="radio_button_main flex pd20">
                     <div class="fatturazione_mensile">
                         <input class="scale_2" type="radio" name="Fatturazione mensile" id=""> <span>Fatturazione mensile</span>
@@ -244,7 +244,7 @@
             </div>
         </section>
 
-        <section class="mgt150">
+        <section class="pdt150">
             <div class="main_container">
                 <div class="row_main flex">
                     <div class="big_main_col_partner">
@@ -343,33 +343,25 @@
 
                 <div class="fourth_section_column flex wrap">
                     <div class="logo_container">
-                        <div class="main_square light_green pd10">
                             <div class="square green">
                                 <img src="./img/designit.svg" alt="">
                             </div>
-                        </div>
 
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square purple">
                                 <img src="./img/arizona_state_university.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square sky">
                                 <img src="./img/university_of_florida.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square red">
                                 <img src="./img/topps.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     
                 </div>
@@ -387,32 +379,24 @@
 
                 <div class="fourth_section_column flex wrap">
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square red_strong">
                                 <img src="./img/world_bicycle_relief.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square light_blue">
                                 <img src="./img/hearst_corp.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square blue">
                                 <img src="./img/lonely_planet.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     <div class="logo_container">
-                        <div class="main_square">
                             <div class="square yellow">
                                 <img src="./img/clear_channel.svg" alt="">
                             </div>
-                        </div>
                     </div>
                     
                 </div>
@@ -467,7 +451,7 @@
     </main>
 
 
-    <footer class="pd60">
+    <footer class="pdb20 pdt60">
         <div class="footer_container">
             <div class="flex space_between pdb40"> 
                 <div class="col_footer">
@@ -566,7 +550,7 @@
                 </div>
             </div>           
             <div class="riga_footer"></div>
-            <div class="pdb40"><i class="fa-solid fa-earth-americas white pdr5"></i> Italiano <i class="fa-solid fa-caret-up white"></i></div>
+            <div class="pdb40"><i class="fa-solid fa-earth-americas gray pdr5"></i><span class="gray">Italiano</span> <i class="fa-solid fa-caret-up gray"></i></div>
         </div> 
     </footer>
 </body>
