--- a/index.html
+++ b/index.html
@@ -415,29 +415,33 @@
         </section>
 
         <section class="pd40">
-            <div class="main_container pd20">
+            <div class="main_container quest pd20">
                 <h2 class="pd40">Domande Frequenti</h2>
                 <div>
                     <hr>
                 </div>
-                <div class="flex align_center space_between pd40">
+                <div class="flex align_center space_between quest pd40">
                     <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
                 <div class="pdb15">
                     <hr>
                 </div>
-                <div class="flex align_center space_between pd40">
+                <div class="flex align_center space_between quest pd40">
                     <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
                 <div class="pdb15">
                     <hr>
                 </div>
-                <div class="flex align_center space_between pd40">
+                <div class="flex align_center space_between quest pd40">
                     <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
+
                 <div class="pdb80">
                     <hr>
                 </div>
