--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
         <section class="pdt30 bkc">
             <div class="main_container_small">
-                <h1 class="pdt60">Tutto ciò che ti serve per il lavoro, in un unico posto
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto
                 </h1>
                 <div class="pdt30 pdb15 flex">
                     <div class="small_main_col">
