fixed hover quest section

--- a/index.html
+++ b/index.html
@@ -414,9 +414,11 @@
             </div>
         </section>
 
-        <section class="pd40">
-            <div class="main_container quest pd20">
+        <section class="pdt60 pdb150">
+            <div class="main_container pd20">
                 <h2 class="pd40">Domande Frequenti</h2>
+            </div>
+            <div class="main_container quest">   
                 <div>
                     <hr>
                 </div>
@@ -442,7 +444,7 @@
                 </div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
 
-                <div class="pdb80">
+                <div>
                     <hr>
                 </div>
 
