general text class improvements

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                         <input class="scale_2" type="radio" name="fatturazione" id="mensile"> <span>Fatturazione annuale</span> 
                     </div>
                 </div>
-                <div class="row_main space_between flex">
+                <div class="pd20 space_between flex">
                     <div class="cards_second_section border">
                         <div class="border_item flex justy_center align_center">
                             <i class="fa-solid fa-user-tie pdr5"></i> <div>Singolo</div>
                         </div>
-                        <div class="cards_container">
+                        <div class="main_container_big">
                             <div class="main_container_big">
                                 <h3 class="margin_top_bottom_20">Professional</h3>
                                 <strong>€ 12.00</strong>
@@ -133,7 +133,7 @@
                         <div class="border_item flex justy_center align_center">
                             <i class="fa-solid fa-people-group pdr5"></i> <div>Team</div>
                         </div>
-                        <div class="cards_container">
+                        <div class="main_container_big">
                             <div class="main_container_big">
                                 <h3 class="margin_top_bottom_20">Advanced</h3>
                                 <strong>€ 18.00</strong>
@@ -178,7 +178,7 @@
                         <div class="border_item flex justy_center align_center">
                             <i class="fa-solid fa-building pdr5"></i> <div>Azienda</div>
                         </div>
-                        <div class="cards_container">
+                        <div class="main_container_big">
                             <div class="main_container_big">
                                 <h3 class="margin_top_bottom_20">Enterprise</h3>
                                 <strong>Contattaci</strong>
@@ -244,7 +244,7 @@
 
         <section class="pdt150">
             <div class="main_container">
-                <div class="row_main flex">
+                <div class="pd20 flex">
                     <div class="big_main_col_partner">
                         <img class="partner_png" src="./img/partner.png" alt="">
                     </div>
@@ -264,7 +264,7 @@
         <section class="pd40">
             <div class="main_container pd20">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
-                <div class="row_main wrap space_between flex">
+                <div class="pd20 wrap space_between flex">
                     <div class="cards_fourth_section">
                         <img class="pdb15" src="./img/business-feature-switching-tools.png" alt="">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -414,9 +414,9 @@
 
         <section class="pdt60 pdb150">
             <div class="main_container pd20">
-                <h2 class="pd40">Domande Frequenti</h2>
+                <h2 class="pdb20">Domande Frequenti</h2>
             </div>
-            <div class="main_container quest">   
+            <div class="main_container quest pd20">   
                 <div>
                     <hr>
                 </div>
