--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
 
                 <div class="fourth_section_column light_gray pd30">
-                    <img src="./img/designit.svg" alt="">
+                    <img class="central_img" src="./img/designit.svg" alt="">
                     <div class="riga"></div>
                     <p>
                         "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile
